--- a/src/Component/Banner/Banner.css
+++ b/src/Component/Banner/Banner.css
@@ -15,7 +15,7 @@
     font-size: 27px;
 }
 .banner .banner-content .text-2{
-    font-size: 75px;
+    font-size: 55px;
     font-weight: 600;
     margin-left: -3px;
 }
@@ -26,4 +26,17 @@
 .banner .banner-content .text-3 span{
     color: crimson;
     font-weight: 500;
+}
+.banner .max-width a{
+    display: inline-block;
+    color: #fff;
+    background-color: crimson;
+    padding: 12px 36px;
+    border-radius:5px;
+    margin-top: 15px;
+    border: 2px solid crimson;
+    transition: all 0.5s ease;
+}
+.text{
+    font-size: 30px;
 }
