--- a/src/Component/Banner/Banner.css
+++ b/src/Component/Banner/Banner.css
@@ -7,6 +7,7 @@
     color: #fff;
     min-height: 500;
     font-family: "Ubuntu", sans-serif;
+    clip-path: polygon(100% 0%, 100% 54%, 100% 86%, 50% 100%, 0 86%, 0 0);
 }
 .banner .max-width{
     margin: auto 0 auto 40px;
@@ -39,4 +40,15 @@
 }
 .text{
     font-size: 30px;
+}
+@media screen and (max-width: 768px) {
+   .banner .banner-content .text-2{
+        font-size: 35px;
+    }
+    .banner .banner-content .text-3{
+        font-size: 25px;
+    }
+    .banner .banner-content .text-1{
+        font-size: 20px;
+    }
 }
