--- a/src/Component/Services/Services.css
+++ b/src/Component/Services/Services.css
@@ -1,7 +1,9 @@
 .services{
     margin-top: 40px;
+    margin-bottom: 40px;
     background: #111 !important;
     color: #fff;
+
     height: 500px;
     
 }
@@ -15,4 +17,9 @@
     text-align: center;
     padding: 15px;
     border-radius:15px;
+}
+@media (max-width: 768px){
+    .services{
+        height: 100%;
+    }
 }
